--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li class="feature-list">
               <div class="thumb">
                 <svg class="icon-antenna" width="70px" height="70px">
-                  <use href="./images/icons.svg#icon-diagramma"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="feature-title">ПЛАНИРОВАНИЕ</h3>
@@ -305,64 +305,53 @@
         </div>
         </section>
         <section class="section">
-            <h2 class="section-title">Постоянные клиенты</h2>
-
-            <ul class="list clients-link">
-                <li class="clients-list">
-                    <div class="clients">
-                        <a href="" class="our-clints">
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list clients-link">
+                    <li class="clients-list">
+                        <a href="" class="our-clients">
                             <svg class="our-clients-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client"></use>
                 </svg>
                         </a>
-                    </div>
-                </li>
-                <li class="clients-list">
-                    <div class="clients">
-                        <a href="" class="our-clints">
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="our-clients">
                             <svg class="our-clients-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client_1"></use>
                 </svg>
                         </a>
-                    </div>
-                </li>
-                <li class="clients-list">
-                    <div class="clients">
-                        <a href="" class="our-clints">
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="our-clients">
                             <svg class="our-clients-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client_2"></use>
                 </svg>
                         </a>
-                    </div>
-                </li>
-                <li class="clients-list">
-                    <div class="clients">
-                        <a href="" class="our-clints">
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="our-clients">
                             <svg class="our-clients-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client_3"></use>
                 </svg>
                         </a>
-                    </div>
-                </li>
-                <li class="clients-list">
-                    <div class="clients">
-                        <a href="" class="our-clints">
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="our-clients">
                             <svg class="our-clients-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client_4"></use>
                 </svg>
                         </a>
-                    </div>
-                </li>
-                <li class="clients-list">
-                    <div class="clients">
-                        <a href="" class="our-clints">
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="our-clients">
                             <svg class="our-clients-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-client_5"></use>
                 </svg>
                         </a>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </section>
         </main>
         <footer class="footer">
