--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
 
                 <ul class="list catalog">
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_1.jpg" alt="наши сотрудники" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Технокряк</h2>
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_2.jpg" alt="баскетбол" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">
@@ -95,7 +95,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_3.jpg" alt="морепродукты" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Ресторан Seafood</h2>
@@ -104,7 +104,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_4.jpg" alt="наушники" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Проект Prime</h2>
@@ -113,7 +113,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_5.jpg" alt="коробочки" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Проект Boxes</h2>
@@ -122,7 +122,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-listlink">
                             <img src="./images/portfolio_6.jpg" alt="монитор" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Inspiration has no Borders</h2>
@@ -131,7 +131,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_7.jpg" alt="книга" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Издание Limited Edition</h2>
@@ -140,7 +140,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_8.jpg" alt="этикетка" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Проект LAB</h2>
@@ -149,7 +149,7 @@
                         </a>
                     </li>
                     <li class="catalog-link">
-                        <a href="" class="link">
+                        <a href="" class="catalog-list link">
                             <img src="./images/portfolio_9.jpg" alt="ноутбук" width="370" height="294" />
                             <div class="catalog-content-wrapper">
                                 <h2 class="section-works">Growing Business</h2>
